 JASmine, print accounting system for Cups.
   Copyright (C) Nayco.

 (Please read the COPYING file)

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 CHANGELOG FOR JASmine-Web-0.0.3

* 10-01-2006
  - Cleaned again the stylesheets, the menus are better.

* 19-01-2006
  - Menus, CSS stylesheet, again... Oh, I'll have to re-work
    the IE stylesheet too...
  - Improved error handling in summary.php, show_user.php and
    show_printer.php. Now, nice messages are displayed in
    the "report_page" div, instead of nothing. Of course,
    detailled error messages are still displayed in the 
    "error_block" div.
*  24-06-2006
  - Moved the whole project to the newest version of my PHP
    libs (they are now called "terreau")
*  25-06-2006
  - Added server stats and search support.
  - Fix a flaw in show_*.php : Some GET variables were echo'ed
    without being escaped !