@@ -1,6 +1,5 @@
 ====================================
  JASmine, print accounting for Cups
-
      (c) 2005-2006 Nayco
 ====================================
 
