@@ -10,7 +10,7 @@ English documentation is there too.
 1- Put the content of all this archive in a directory under
    the DocumentRoot of your web server. Example:
    # cd /var/www/html/
-   # tar xvjf /path/to/Jasmine-Web-x.yy.tar.bz2
+   # tar xvjf /path/to/Jasmine-Web-x.y.z.tar.bz2
    # mv Jasmine-Web jasmine
    # cd jasmine
    Take care of the files and dirs permissions !!!
