@@ -1,32 +1,0 @@
-<?php
-/* JASmine, print accounting system for Cups.
- Copyright (C) Nayco.
-
- (Please read the COPYING file)
-
- This program is free software; you can redistribute it and/or
- modify it under the terms of the GNU General Public License
- as published by the Free Software Foundation; either version 2
- of the License, or (at your option) any later version.
-
- This program is distributed in the hope that it will be useful,
- but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- GNU General Public License for more details.
-
- You should have received a copy of the GNU General Public License
- along with this program; if not, write to the Free Software
- Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA. */
-
-  // config.php: global variables and parameters.
-
-  // Various vars
-  $DEFAULT_STARTPAGE="summary";
-
-  // Database vars
-  $DB_host="jasmine";
-  $DB_login="jasmine";
-  $DB_pass="jasmine";
-
-  $DB_db="jasmine";
-?>
