@@ -18,7 +18,7 @@
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA. */
 
-  /* Show_erverphp: Displays stats for a given server, 
+  /* Show_server.php: Displays stats for a given server, 
      passed with $_GET['server']. */
      
   // Includes
