@@ -37,3 +37,6 @@
   - Added server stats and search support.
   - Fix a flaw in show_*.php : Some GET variables were echo'ed
     without being escaped !
+* 01-10-2006
+  - Preparing for realease : Reviewed copyright notices, READMEs,
+    docs, scripts... Fixed typos.
